--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,7 @@ body {
   border-radius: 4px;
   border: 0;
   padding: 10px 22px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-content {
   display: flex;
@@ -510,18 +511,15 @@ a.footer-social-media {
   position: absolute;
   display: flex;
   align-items: center;
-
   width: 100%;
-  height: 101%;
+  height: 100%;
   top: 0;
-
   font-weight: 400;
   font-size: 18px;
   line-height: 1.55;
   font-family: "Roboto";
   color: #fff;
   background-color: rgba(33, 150, 243, 0.9);
-
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
