--- a/css/styles.css
+++ b/css/styles.css
@@ -154,9 +154,9 @@ body {
 }
 
 .first-button {
+  background-color: var(--hover-color);
   display: block;
   margin: auto;
-  padding: 10px 41px;
   width: 200px;
   height: 50px;
   font-size: 16px;
@@ -164,19 +164,15 @@ body {
   line-height: 1.875;
   text-align: center;
   border-radius: 4px;
-  border-color: var(--white);
+  color: var(--footer-color);
+  background-color: var(--hover-color);
+  border-color: var(--hover-color);
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.first-button:hover {
-  border-radius: 4px;
-  color: var(--footer-color);
-  background-color: var(--hover-color);
-  border-color: var(--hover-color);
-}
 .backdrop {
   position: fixed;
   top: 0;
@@ -486,15 +482,11 @@ a.footer-social-media {
   margin: 0;
 }
 .work-progres {
-  display: grid;
-  gap: 43px;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  list-style: none;
-  padding-left: 0;
-  align-items: center;
-  padding-bottom: 94px;
-  width: calc((100% - 2 * 30px) / 3);
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0 auto;
+  row-gap: 30px;
 }
 .work-content:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -511,9 +503,11 @@ a.footer-social-media {
   position: absolute;
   display: flex;
   align-items: center;
+
   width: 100%;
-  height: 100%;
+  height: 101%;
   top: 0;
+
   font-weight: 400;
   font-size: 18px;
   line-height: 1.55;
